# smg

./: .gitignore  .gitmodules  README.md  TODO.md  pyproject.toml
.github/workflows/: validate.yml
benchmarks/: bench.py  bench_mp.py
docs/: architecture-concepts.md  next_release_design.md
native/: build.zig
native/src/: extract.zig
scripts/: parity_check.sh  pre-commit  validate
src/semg/: cli.py  graph_metrics.py  metrics.py  oo_metrics.py  scan.py  watch.py
src/semg/langs/: __init__.py  c.py  javascript.py  python.py  zig.py
src/smg/: analyze.py  blame.py  churn.py  cli.py  concepts.py  context.py  diff.py  export.py  graph.py  graph_metrics.py  hashing.py  oo_metrics.py  query.py  rule_expr.py  rules.py  scan.py  storage.py  watch.py  witness.py
src/smg/cli/: __init__.py  _compact.py  _export.py  concepts.py  enforce.py  explore.py  inspect.py  mutate.py
src/smg/langs/: __init__.py  c.py  javascript.py  python.py  zig.py
src/smg/search/: __init__.py  indexer.py  query.py  schema.py
tests/: test_batch.py  test_blame.py  test_c.py  test_churn.py  test_cli.py  test_concepts.py  test_context.py  test_diff.py  test_export.py  test_graph.py  test_graph_metrics.py  test_hashing.py  test_incremental.py  test_javascript.py  test_langs_registry.py  test_metrics.py  test_metrics_iterative.py  test_metrics_properties.py  test_oo_metrics.py  test_rules.py  test_scan.py  test_search.py  test_storage.py  test_watch.py  test_zig.py
