[project]
name = "semg"
version = "0.1.0"
description = "Semantic graph for software architecture — built for agents and humans"
readme = "README.md"
authors = [
    { name = "femtomc", email = "mccoybecker@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "rich-click>=1.8",
]

[project.scripts]
semg = "semg.cli:main"

[project.optional-dependencies]
scan = [
    "tree-sitter>=0.23",
    "tree-sitter-javascript>=0.25.0",
    "tree-sitter-python>=0.23",
    "tree-sitter-typescript>=0.23.2",
    "tree-sitter-zig>=1.1.2",
    "watchdog>=6.0.0",
]
dev = [
    "hypothesis>=6.151.10",
    "pytest>=8.0",
]

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
