[project]
name = "smg"
version = "0.1.0"
description = "Semantic graph for software architecture — built for agents and humans"
readme = "README.md"
authors = [
    { name = "femtomc", email = "mccoybecker@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "rich-click>=1.8",
]

[project.scripts]
smg = "smg.cli:main"

[project.optional-dependencies]
scan = [
    "tree-sitter>=0.23",
    "tree-sitter-c>=0.24.1",
    "tree-sitter-cpp>=0.23.4",
    "tree-sitter-javascript>=0.25.0",
    "tree-sitter-python>=0.23",
    "tree-sitter-typescript>=0.23.2",
    "tree-sitter-zig>=1.1.2",
    "watchdog>=6.0.0",
    "xxhash>=3.0",
]
dev = [
    "hypothesis>=6.151.10",
    "pyright>=1.1.408",
    "pytest>=8.0",
    "ruff>=0.15.0",
]

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 120
exclude = [
    "native/vendor",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.per-file-ignores]
# Availability-check imports (import X; HAS = True pattern)
"tests/test_c.py" = ["F401"]
"tests/test_javascript.py" = ["F401"]
"tests/test_scan.py" = ["F401"]
"tests/test_watch.py" = ["F401"]
"tests/test_zig.py" = ["F401"]
"tests/test_incremental.py" = ["F401"]

[tool.pyright]
include = ["src"]
pythonVersion = "3.11"
typeCheckingMode = "standard"
reportOptionalMemberAccess = "error"
